use an arena allocator